--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -7,6 +7,10 @@
         <variable
             name="productWithCategory"
             type="com.example.konsinyasiapp.entities.ProductWithCategory" />
+
+        <variable
+            name="productData"
+            type="com.example.konsinyasiapp.entities.ProductData" />
     </data>
 
 
