--- a/app/src/main/res/layout/item_deposit.xml
+++ b/app/src/main/res/layout/item_deposit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -12,18 +13,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
+        android:layout_margin="@dimen/_7sdp"
         app:cardBackgroundColor="#344955"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardElevation="@dimen/_8sdp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/_16sdp">
+            android:padding="@dimen/_10sdp">
 
             <TextView
+                android:id="@+id/tv_nama_toko_list_deposit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="@dimen/_2sdp"
@@ -32,49 +34,63 @@
                 android:text="@{depositWithShop.shopData.name}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_15ssp"
-                app:drawableStartCompat="@drawable/ic_store" />
+                app:drawableStartCompat="@drawable/ic_store"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_tanggal_deposit_detail_toko"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:drawablePadding="@dimen/_2sdp"
+                android:fontFamily="@font/lato"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:text="@{depositWithShop.depositData.depositDate}"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                app:drawableStartCompat="@drawable/ic_calender"
+                app:layout_constraintStart_toStartOf="@id/tv_nama_toko_list_deposit"
+                app:layout_constraintTop_toBottomOf="@id/tv_nama_toko_list_deposit" />
+
+            <TextView
+                android:id="@+id/view_detail_toko"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:gravity="center_vertical"
+                android:text="-"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tanggal_deposit_detail_toko"
+                app:layout_constraintStart_toEndOf="@id/tv_tanggal_deposit_detail_toko"
+                app:layout_constraintTop_toTopOf="@id/tv_tanggal_deposit_detail_toko" />
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/view_detail_toko"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/view_detail_toko"
+                app:layout_constraintTop_toTopOf="@id/view_detail_toko">
 
                 <TextView
-                    android:id="@+id/tv_tanggal_deposit"
+                    android:id="@+id/tv_tanggal_finish_deposit_detail_toko"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="@dimen/_2sdp"
-                    android:fontFamily="@font/lato"
-                    android:gravity="center_vertical"
-                    android:text="@{depositWithShop.depositData.depositDate}"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_13ssp"
-                    app:drawableStartCompat="@drawable/ic_calender" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_1sdp"
-                    android:layout_marginEnd="@dimen/_2sdp"
-                    android:gravity="center_vertical"
-                    android:text="-"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_13ssp" />
-
-                <TextView
-                    android:id="@+id/tvTanggalFinish"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_8sdp"
                     android:fontFamily="@font/lato"
                     android:gravity="center_vertical"
                     android:text="@{depositWithShop.depositData.depositFinish.isEmpty() ? `Proses` : depositWithShop.depositData.depositFinish}"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_13ssp" />
-            </LinearLayout>
+                    android:textSize="@dimen/_13ssp"
+                    app:layout_constraintBottom_toBottomOf="@id/view_detail_toko"
+                    app:layout_constraintStart_toEndOf="@id/view_detail_toko"
+                    app:layout_constraintTop_toTopOf="@id/view_detail_toko" />
 
-        </LinearLayout>
+            </HorizontalScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
