--- a/app/src/main/res/layout/item_deposit_date.xml
+++ b/app/src/main/res/layout/item_deposit_date.xml
@@ -6,64 +6,77 @@
 
         <variable
             name="depositWithShop"
-            type="com.example.konsinyasiapp.entities.DepositWithShop" />
+            type="com.example.konsinyasiapp.entities.DepositData" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_2sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_marginEnd="@dimen/_4sdp"
+        android:layout_marginBottom="@dimen/_2sdp"
         app:cardBackgroundColor="#344955"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardElevation="@dimen/_8sdp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/_5sdp">
+            android:padding="@dimen/_10sdp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_tanggal_deposit_detail_toko"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:drawablePadding="@dimen/_2sdp"
+                android:fontFamily="@font/lato"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:text="@{depositWithShop.depositDate}"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                app:drawableStartCompat="@drawable/ic_calender"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/view_detail_toko"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:gravity="center_vertical"
+                android:text="-"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tanggal_deposit_detail_toko"
+                app:layout_constraintStart_toEndOf="@id/tv_tanggal_deposit_detail_toko"
+                app:layout_constraintTop_toTopOf="@id/tv_tanggal_deposit_detail_toko" />
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/view_detail_toko"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/view_detail_toko"
+                app:layout_constraintTop_toTopOf="@id/view_detail_toko">
 
                 <TextView
-                    android:id="@+id/tv_tanggal_deposit"
+                    android:id="@+id/tv_tanggal_finish_deposit_detail_toko"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="@dimen/_2sdp"
+                    android:ellipsize="end"
                     android:fontFamily="@font/lato"
                     android:gravity="center_vertical"
-                    android:text="@{depositWithShop.depositData.depositDate}"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_13ssp"
-                    app:drawableStartCompat="@drawable/ic_calender" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_1sdp"
-                    android:layout_marginEnd="@dimen/_2sdp"
-                    android:gravity="center_vertical"
-                    android:text="-"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingEnd="@dimen/_8sdp"
+                    android:text="@{depositWithShop.depositFinish.isEmpty() ? `Proses` : depositWithShop.depositFinish}"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_13ssp" />
 
-                <TextView
-                    android:id="@+id/tvTanggalFinish"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato"
-                    android:gravity="center_vertical"
-                    android:text="@{depositWithShop.depositData.depositFinish.isEmpty() ? `Proses` : depositWithShop.depositData.depositFinish}"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_13ssp" />
-            </LinearLayout>
+            </HorizontalScrollView>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
