--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -34,7 +34,9 @@
             android:layout_below="@id/no_data_imageView"
             android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/_16sdp"
+            android:fontFamily="@font/lato"
             android:text="@string/tidak_ada_kategori"
+            android:textColor="@color/white"
             android:textSize="@dimen/_16ssp"
             android:visibility="invisible" />
 
