--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -145,6 +145,7 @@
                 android:id="@+id/rv_item_deposit_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_riwayat_deposit_shop"
                 tools:listitem="@layout/item_deposit_date" />
@@ -154,7 +155,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
+                android:fontFamily="@font/lato"
                 android:text="Tidak Ada Riwayat Deposit"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_16ssp"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
