--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="@dimen/_8sdp"
     android:layout_marginTop="@dimen/_9sdp"
     android:layout_marginEnd="8dp"
     app:cardBackgroundColor="#344955"
@@ -24,8 +24,8 @@
             android:id="@+id/tv_total_penjualan_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:fontFamily="@font/lato_black"
             android:text="@string/total_penjualan"
             android:textColor="@color/white"
@@ -37,9 +37,9 @@
             android:id="@+id/tv_jumlah_harga_yang_terjual_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/lato"
-            android:text="Rp 99"
+            android:text="Rp0"
             android:textColor="@color/white"
             android:textSize="@dimen/_17ssp"
             app:layout_constraintStart_toStartOf="@+id/tv_total_penjualan_home"
@@ -49,7 +49,7 @@
             android:id="@+id/tv_deposit_belum_selesai_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:fontFamily="@font/lato_black"
             android:text="Deposit Belum Selesai"
             android:textColor="@color/white"
@@ -61,9 +61,7 @@
             android:id="@+id/rv_deposit_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="@dimen/_8sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_deposit_belum_selesai_home"
@@ -73,8 +71,11 @@
             android:id="@+id/no_data_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:fontFamily="@font/lato"
             android:text="Tidak Ada Deposit"
+            android:textColor="@color/white"
             android:textSize="@dimen/_16ssp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
